Fix scrollbars shifting content

--- a/site/Styles/site/_elements.scss
+++ b/site/Styles/site/_elements.scss
@@ -18,6 +18,10 @@ html {
 			transition-duration: 0ms !important;
 		}
 	}
+
+	@media (min-width: $mq-site-wide) {
+		scrollbar-gutter: stable;
+	}
 }
 
 a:link {
